--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,22 +1,37 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --secondary-background: #f5f5f5;
+  --link: #4f46e5;
+  --header: #dc2626;
+  --menu-background: #fafafa;
+  --muted: #6b7280;
+}
+
+.dark {
+  --background: #000;
+  --secondary-background: #323232;
+  --foreground: #fff;
+  --link: #c3c7f4;
+  --header: #ffddc0;
+  --menu-background: #212121;
+  --muted: #a4a4a4;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-secondary-background: var(--secondary-background);
+  --color-link: var(--link);
+  --color-header: var(--header);
+  --color-menu-background: var(--menu-background);
+  --color-muted: var(--muted);
+  --font-mono: var(--font-jetbrains-mono);
 }
 
 body {
